# trader

./: .gitignore  CMakeLists.txt  main.cpp  main.h  test_main.cpp
FA/: PE.cpp  PE.h
TA/: Algorithm.h  DeepLearning.cpp  MeanReversion.h  ProcessHandler.cpp  ProcessHandler.h  RSI.cpp  RSI.h  SMA.cpp
TA_unittest/: DataStorageTest.cpp
analysis/: ADXAnalyzer.cpp  InstrumentAnalyzer.cpp  InstrumentAnalyzer.h  InstrumentMetaAnalyzer.cpp  InstrumentMetaAnalyzer.h  KpisAnalyzer.cpp  KpisAnalyzer.h  ReportAnalyzer.cpp  ReportAnalyzer.h  SMAAnalyzer.h  StockPriceAnalyzer.cpp  StockPriceAnalyzer.h  StockSplitAnalyzer.cpp  StockSplitAnalyzer.h
api/: IBorsdata.h  IInstrumentsApi.h  IInstrumentsMetaApi.h  IKpisApi.h  IReportsApi.h  IStockPricesApi.h  IStockSplitsApi.h  InstrumentsApi.cpp  InstrumentsApi.h  InstrumentsMetaApi.cpp  InstrumentsMetaApi.h  KpisApi.cpp  KpisApi.h  ReportsApi.cpp  ReportsApi.h  StockPrices.h  StockPricesApi.cpp  StockPricesApi.h  StockSplitsApi.cpp  StockSplitsApi.h
api_unittest/: InstrumentsApiTest.cpp  InstrumentsMetaApiTest.cpp  KpisApiTest.cpp  ReportsApiTest.cpp  StockPricesTest.cpp  StockSplitsTest.cpp
borsdata/: Instruments.cpp  Instruments.h  InstrumentsMeta.cpp  InstrumentsMeta.h  Kpis.cpp  Kpis.h  Reports.cpp  Reports.h  StockPrices.cpp  StockPrices.h  StockSplits.cpp  StockSplits.h
comm/: Client.cpp  Client.h  SqlClient.h
comm_unittest/: SqlClientTest.cpp
configuration/: ApiConfiguration.h
data/: UNIBIT_symbols[AMEX].json  UNIBIT_symbols[NASDAQ].json  UNIBIT_symbols[NYSE].json  UNIBIT_symbols[OMXC].json  UNIBIT_symbols[OMXH].json  UNIBIT_symbols[OMXT].json  UNIBIT_symbols[OMX].json  regions.json  symbols.json
h/: ADX.h  ADXAnalyzer.h  ActiveAlgorithm.h  AlgoDispatcher.h  AlgoQueue.h  Algorithm.h  CSVWriter.h  Client.h  DataStorage.h  Exceptions.h  Interests.h  JsonWriter.h  MeanReversion.h  SMA.h  SMAAnalyzer.h  SearchJson.h  Util.h
ifc/: Analyzer.h  Borsdata.cpp  Borsdata.h  IEX.cpp  IEX.h  Observer.h  Subject.cpp  Subject.h  UniBit.cpp  UniBit.h
inc/: ADX.h  ActiveAlgorithm.h  AlgoContext.h  AlgoDispatcher.h  AlgoQueue.h  Client.h  Command.h  DeepLearning.h  Exceptions.h  Feeder.h  IEX.h  InputParser.h  MeanReversion.h  SearchJson.h  StockInfo.h  TaLib.h  UniBit.h  Util.h  WebSocket.h  main.h
inc/ifc/: ICommand.h
io/: CSVWriter.cpp  JsonWriter.cpp  JsonWriter.h  SearchJson.h
model/: BranchV1.h  BranchesRespV1.h  CountriesRespV1.h  CountryV1.h  InstrumentRespV1.h  InstrumentUpdatedRespV1.h  InstrumentUpdatedV1.h  InstrumentV1.h  KpiHistoryV1.h  KpiV1.h  KpisAllCompRespV1.h  KpisCalcUpdatedRespV1.h  KpisHistoryRespV1.h  KpisRespV1.h  MarketV1.h  MarketsRespV1.h  ReportV1.h  ReportsCompoundRespV1.h  ReportsRespV1.h  SectorV1.h  SectorsRespV1.h  StockPriceV1.h  StockPricesLastRespV1.h  StockPricesRespV1.h  StockSplitRespV1.h  StockSplitV1.h
src/: ADX.cpp  Client.cpp  DeepLearning.cpp  Feeder.cpp  IEX.cpp  IEXRef.cpp  IEXStock.cpp  Interests.cpp  MeanReversion.cpp  SMA.cpp  SMAAnalyzer.cpp  TaLib.cpp  UniBit.cpp
thread_engine/: ActiveAlgorithm.h  AlgoDispatcher.h  AlgoQueue.h
unittest/: FeederTest.cpp  HTMLRequestTest.cpp  RequestTest.cpp  SearchJsonTest.cpp  TestStartup.h  UniBitApiTest.cpp
utils/: Exceptions.h  Util.h
